[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["mohammad silwadi <mohammadsilwadi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
matplotlip = "^0.2"
jupyterlab = "^3.2.1"
sklearn = "^0.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
